@@ -17,6 +17,7 @@ ver 0.19 (not yet released)
 * encoder:
   - shine: new encoder plugin
 * new resampler option using libsoxr
+* the update thread runs at "idle" priority
 
 ver 0.18.7 (2013/01/13)
 * playlist
